--- a/notebooks/senzing-sdk-api-specification/java/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/senzing-sdk-api-specification/java/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -24,35 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Table of contents\n",
-    "\n",
-    "1. [Prepare environment](#Prepare-environment)\n",
-    "    1. [Java imports](#Java-imports)\n",
-    "    1. [Initialize Senzing configuration](#Initialize-Senzing-configuration)\n",
-    "    1. [Create G2Config instance](#Create-G2Config-instance)\n",
-    "1. [G2ConfigMgr](#G2ConfigMgr)\n",
-    "    1. [G2ConfigMgr Initialization](#G2ConfigMgr-Initialization)\n",
-    "    1. [Managing configurations](#Managing-configurations)\n",
-    "        1. [addConfig](#addConfig)\n",
-    "        1. [getConfigList](#getConfigList)\n",
-    "        1. [getConfig](#getConfig)\n",
-    "    1. [Default configurations](#Default-configurations)\n",
-    "        1. [setDefaultConfigID](#setDefaultConfigID)\n",
-    "        1. [getDefaultConfigID](#getDefaultConfigID)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Prepare environment"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Java imports"
    ]
   },
   {
@@ -66,6 +38,113 @@
     "import com.senzing.g2.engine.G2Config;\n",
     "import com.senzing.g2.engine.G2ConfigJNI;\n",
     "import com.senzing.g2.engine.Result;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### Helper class for Json Rendering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "%%loadFromPOM\n",
+    "<dependency>\n",
+    "    <groupId>org.glassfish</groupId>\n",
+    "    <artifactId>javax.json</artifactId>\n",
+    "    <version>1.1.4</version>\n",
+    "</dependency>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "import javax.json.*;\n",
+    "import static java.util.Collections.*;\n",
+    "import static javax.json.stream.JsonGenerator.PRETTY_PRINTING;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "public class JsonUtil {\n",
+    "    private static final JsonWriterFactory PRETTY_FACTORY\n",
+    "        = Json.createWriterFactory(singletonMap(PRETTY_PRINTING, true));\n",
+    "        \n",
+    "    private static final JsonWriterFactory UGLY_FACTORY\n",
+    "        = Json.createWriterFactory(emptyMap());\n",
+    "    \n",
+    "    public static String toJsonText(JsonValue val) {\n",
+    "        return toJsonText(val, true);\n",
+    "    }\n",
+    "\n",
+    "    public static String toJsonText(JsonValue val, boolean prettyPrint) {\n",
+    "        JsonWriterFactory factory = (prettyPrint) ? PRETTY_FACTORY : UGLY_FACTORY;\n",
+    "        StringWriter sw = new StringWriter();\n",
+    "        JsonWriter writer = factory.createWriter(sw);\n",
+    "        writer.write(val);\n",
+    "        sw.flush();\n",
+    "        return sw.toString();\n",
+    "    }\n",
+    "    \n",
+    "    public static JsonObject parseJsonObject(String jsonText) {\n",
+    "        if (jsonText == null) return null;\n",
+    "        StringReader sr = new StringReader(jsonText);\n",
+    "        JsonReader jsonReader = Json.createReader(sr);\n",
+    "        return jsonReader.readObject();\n",
+    "  }\n",
+    "\n",
+    "    public static JsonArray parseJsonArray(String jsonText) {\n",
+    "        if (jsonText == null) return null;\n",
+    "        StringReader sr = new StringReader(jsonText);\n",
+    "        JsonReader jsonReader = Json.createReader(sr);\n",
+    "        return jsonReader.readArray();\n",
+    "  }\n",
+    "    \n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "import java.util.UUID;\n",
+    "String str;\n",
+    "public static void RenderJSON(Object obj){\n",
+    "    str = obj.toString();\n",
+    "    JsonObject json = JsonUtil.parseJsonObject(str);\n",
+    "    String Config = JsonUtil.toJsonText(json, false);\n",
+    "    UUID id = UUID.randomUUID();\n",
+    "    String uuid = id.toString();\n",
+    "    String div = \"<div id=\\\"\"+ uuid +\"\\\" style=\\\"height:100%; width:100%; background-color: LightCyan\\\"></div>\";\n",
+    "    display(div, \"text/html\");\n",
+    "    String jav = \"require([\\\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\\\"], function() {document.getElementById(\\'\"+ uuid +\"\\').appendChild(renderjson(\"+json+\"))});\";\n",
+    "    display(jav, \"application/javascript\");\n",
+    "}"
    ]
   },
   {
@@ -120,7 +199,14 @@
     "   +     \"\\\"CONNECTION\\\": \\\"\" + sqlConnection + \"\\\"\"\n",
     "   + \"}}\";\n",
     "   \n",
-    "System.out.println(senzingConfigJson);"
+    "RenderJSON(senzingConfigJson);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## G2Config"
    ]
   },
   {
@@ -237,7 +323,9 @@
     "StringBuffer configStringBuffer = new StringBuffer();\n",
     "int returnCode = g2Config.save(configHandle, configStringBuffer);\n",
     "if (returnCode != 0)\n",
-    "    g2Config.getLastException();"
+    "    System.out.print(g2Config.getLastException());\n",
+    "else\n",
+    "    RenderJSON(configStringBuffer);"
    ]
   },
   {
@@ -268,7 +356,7 @@
     "Result<Long> configID = new Result<Long>();\n",
     "\n",
     "int returnCode = g2ConfigMgr.addConfig(configStr, configComments, configID);\n",
-    "System.out.println(\"CONFIG ID: \" + configID.getValue());"
+    "System.out.print(\"CONFIG ID: \" + configID.getValue());"
    ]
   },
   {
@@ -290,7 +378,7 @@
     "StringBuffer response = new StringBuffer();\n",
     "\n",
     "int returnCode = g2ConfigMgr.getConfigList(response);\n",
-    "System.out.println(response.toString());"
+    "RenderJSON(response);"
    ]
   },
   {
@@ -317,7 +405,7 @@
     "StringBuffer response = new StringBuffer();\n",
     "\n",
     "int returnCode = g2ConfigMgr.getConfig(configID.getValue(), response);\n",
-    "System.out.println(response.toString());"
+    "RenderJSON(response);"
    ]
   },
   {
@@ -382,9 +470,9 @@
     "Result<Long> configID = new Result<Long>();\n",
     "int returnCode = g2ConfigMgr.getDefaultConfigID(configID);\n",
     "if(returnCode!=0)\n",
-    "    g2Config.getLastException();\n",
-    "\n",
-    "System.out.println(configID.getValue());"
+    "    System.out.print(g2Config.getLastException());\n",
+    "else\n",
+    "    System.out.print(configID.getValue());"
    ]
   }
  ],
@@ -404,7 +492,20 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.5+10-post-Ubuntu-0ubuntu1.118.04"
+   "version": "11.0.6+10-post-Ubuntu-1ubuntu118.04.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
