--- a/notebooks/senzing-sdk-api-specification/python/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/senzing-sdk-api-specification/python/senzing-G2Config-sdk-api-specification.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# G2Config Reference\n",
-    "\n",
-    "More information:\n",
-    "\n",
-    "1. [GitHub repository](https://github.com/Senzing/docker-jupyter)\n",
-    "1. [Senzing documentation](http://docs.senzing.com/?python#g2config)"
+    "# G2Config Reference"
    ]
   },
   {
@@ -141,9 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initialize G2Config\n",
-    "\n",
-    "Details at [G2Config Initialization](senzing-G2Config-reference.ipynb#G2Config-Initialization)."
+    "### Initialize G2Config\n"
    ]
   },
   {
@@ -164,9 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create configuration handle\n",
-    "\n",
-    "Details at [G2Config.create](senzing-G2Config-reference.ipynb#create)."
+    "### Create configuration handle\n"
    ]
   },
   {
@@ -186,6 +177,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    response_bytearray = bytearray()\n",
+    "    g2_config.save(config_handle, response_bytearray)\n",
+    "    \n",
+    "except G2Exception.G2ModuleGenericException as err:\n",
+    "    print(g2_config.getLastException())\n",
+    "    \n",
+    "RenderJSON(response_bytearray)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    # example using the saved config from the `save()` method\n",
+    "    g2_config.load(response_bytearray)\n",
+    "    \n",
+    "except G2Exception.G2ModuleGenericException as err:\n",
+    "    print(g2_config.getLastException())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Datasources"
    ]
   },
@@ -193,11 +228,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### listDataSources\n",
+    "### listDataSourcesV2\n",
     "\n",
-    "Call G2Config's `listDataSources()` method and pretty-printsresults.\n",
-    "\n",
-    "Details at [G2Config.listDataSources](senzing-G2Config-reference.ipynb#listDataSources).\n"
+    "Call G2Config's `listDataSourcesV2()` method and pretty-printsresults.\n"
    ]
   },
   {
@@ -221,11 +254,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### addDataSource\n",
+    "### addDataSourceV2\n",
     "\n",
-    "Call G2Config's `addDataSource()` method and pretty-prints results.\n",
-    "\n",
-    "Details at [G2Config.addDataSource](senzing-G2Config-reference.ipynb#addDataSource)."
+    "Call G2Config's `addDataSourceV2()` method and pretty-prints results.\n"
    ]
   },
   {
@@ -244,6 +275,34 @@
     "    g2_config.addDataSourceV2(config_handle, datasource_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
+    "    print(g2_config.getLastException())\n",
+    "\n",
+    "RenderJSON(response_bytearray)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### addDataSourceWithID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    datasource_json = \"{\\\"DSRC_CODE\\\": \\\"CUSTOMER\\\"}\" \n",
+    "\n",
+    "    response_bytearray = bytearray()\n",
+    "    \n",
+    "    id = 0\n",
+    "    \n",
+    "    g2_config.addDataSourceWithID(config_handle, datasource_json, id)\n",
+    "    \n",
+    "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_config.getLastException())"
    ]
   },
@@ -253,10 +312,8 @@
    "source": [
     "### listDataSources again\n",
     "\n",
-    "Call G2Config's `listDataSources()` method and pretty-prints results.\n",
-    "Notice that the list now contains the newly added datasource_code of \"CUSTOMER\".\n",
-    "\n",
-    "Details at [G2Config.listDataSources](senzing-G2Config-reference.ipynb#listDataSources)."
+    "Call G2Config's `listDataSourcesV2()` method and pretty-prints results.\n",
+    "Notice that the list now contains the newly added datasource_code of \"CUSTOMER\".\n"
    ]
   },
   {
@@ -285,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### listEntityClasses\n",
+    "### listEntityClassesV2\n",
     "Calls G2Config's `listEntityClassesV2()` method and pretty-prints results."
    ]
   },
@@ -310,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### listEntityTypes\n",
+    "### listEntityTypesV2\n",
     "Calls G2Config's `listEntityTypesV2()` method and pretty-prints results."
    ]
   },
@@ -324,31 +381,6 @@
     "    response_bytearray = bytearray()\n",
     "\n",
     "    g2_config.listEntityTypesV2(config_handle, response_bytearray)\n",
-    "    \n",
-    "except G2Exception.G2ModuleGenericException as err:\n",
-    "    print(g2_config.getLastException())\n",
-    "    \n",
-    "RenderJSON(response_bytearray.decode())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### addEntityClass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    entityclass_json = \"{\\\"ECLASS_CODE\\\": \\\"COMPANY\\\"}\" \n",
-    "    response_bytearray = bytearray()\n",
-    "\n",
-    "    g2_config.addEntityClassV2(config_handle, entityclass_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_config.getLastException())\n",
@@ -383,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### addEntityType"
+    "### addEntityTypeV2"
    ]
   },
   {
@@ -432,29 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### deleteEntityClasses"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    entityclass_json = \"{\\\"ECLASS_CODE\\\": \\\"COMPANY\\\"}\" \n",
-    "\n",
-    "    g2_config.deleteEntityClassV2(config_handle, entityclass_json)\n",
-    "\n",
-    "except G2Exception.G2ModuleGenericException as err:\n",
-    "    print(g2_config.getLastException())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### deleteEntityTypes"
+    "### deleteEntityTypesV2"
    ]
   },
   {
@@ -483,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### listFeatureElements"
+    "### listFeatureElementsV2"
    ]
   },
   {
@@ -509,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### getFeatureElement"
+    "### getFeatureElementV2"
    ]
   },
   {
@@ -534,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### addFeatureElement"
+    "### addFeatureElementV2"
    ]
   },
   {
@@ -559,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### deleteFeatureElement"
+    "### deleteFeatureElementV2"
    ]
   },
   {
@@ -580,7 +590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### listFeatureClasses"
+    "### listFeatureClassesV2"
    ]
   },
   {
@@ -604,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### listFeatures"
+    "### listFeaturesV2"
    ]
   },
   {
@@ -630,7 +640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### getFeature"
+    "### getFeatureV2"
    ]
   },
   {
@@ -654,7 +664,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### addFeature"
+    "### addFeatureV2"
    ]
   },
   {
@@ -679,7 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### deleteFeature"
+    "### deleteFeatureV2"
    ]
   },
   {
@@ -700,7 +710,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### addElementToFeature"
+    "### addElementToFeatureV2"
    ]
   },
   {
@@ -721,7 +731,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### deleteElementFromFeature"
+    "### deleteElementFromFeatureV2"
    ]
   },
   {
@@ -750,7 +760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### listFeatureStandardizationFunctions"
+    "#### listFeatureStandardizationFunctionsV2"
    ]
   },
   {
@@ -774,7 +784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### listFeaturesStandardizationFunctionCalls"
+    "#### listFeaturesStandardizationFunctionCallsV2"
    ]
   },
   {
@@ -798,7 +808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### getFeatureStandardizationFunctionCall"
+    "#### getFeatureStandardizationFunctionCallV2"
    ]
   },
   {
@@ -822,7 +832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### addFeatureStandardizationFunctionCall"
+    "#### addFeatureStandardizationFunctionCallV2"
    ]
   },
   {
@@ -846,7 +856,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### deleteFeatureStandardizationFunctionCall"
+    "#### deleteFeatureStandardizationFunctionCallV2"
    ]
   },
   {
@@ -875,7 +885,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### listFeatureExpressionFunctions"
+    "#### listFeatureExpressionFunctionsV2"
    ]
   },
   {
@@ -898,7 +908,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### listFeatureExpressionFunctionCalls"
+    "#### listFeatureExpressionFunctionCallsV2"
    ]
   },
   {
@@ -922,7 +932,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### getFeatureExpressionFunctionCall"
+    "#### getFeatureExpressionFunctionCallV2"
    ]
   },
   {
@@ -946,7 +956,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### addFeatureExpressionFunctionCall"
+    "#### addFeatureExpressionFunctionCallV2"
    ]
   },
   {
@@ -970,7 +980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### addFeatureExpressionFunctionCallElement"
+    "#### addFeatureExpressionFunctionCallElementV2"
    ]
   },
   {
@@ -991,7 +1001,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### deleteFeatureExpressionFunctionCallElement"
+    "#### deleteFeatureExpressionFunctionCallElementV2"
    ]
   },
   {
@@ -1012,7 +1022,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### deleteFeatureExpressionFunctionCall"
+    "#### deleteFeatureExpressionFunctionCallV2"
    ]
   },
   {
@@ -1041,7 +1051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### listFeatureComparisonFunctions"
+    "#### listFeatureComparisonFunctionsV2"
    ]
   },
   {
@@ -1065,7 +1075,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### listFeatureComparisonFunctionCalls"
+    "#### listFeatureComparisonFunctionCallsV2"
    ]
   },
   {
@@ -1091,7 +1101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### getFeatureComparisonFunctionCall"
+    "#### getFeatureComparisonFunctionCallV2"
    ]
   },
   {
@@ -1115,7 +1125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### addFeatureComparisonFunctionCall"
+    "#### addFeatureComparisonFunctionCallV2"
    ]
   },
   {
@@ -1139,7 +1149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### deleteFeatureComparisonFunctionCall"
+    "#### deleteFeatureComparisonFunctionCallV2"
    ]
   },
   {
@@ -1161,7 +1171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### addFeatureComparsionFunctionCallElement"
+    "#### addFeatureComparsionFunctionCallElementV2"
    ]
   },
   {
@@ -1182,7 +1192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### deleteFeatureComparsionFunctionCallElement"
+    "#### deleteFeatureComparsionFunctionCallElementV2"
    ]
   },
   {
@@ -1210,7 +1220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### listFeatureDistinctFunctions"
+    "#### listFeatureDistinctFunctionsV2"
    ]
   },
   {
@@ -1234,7 +1244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### listFeatureDistinctFunctionCalls"
+    "#### listFeatureDistinctFunctionCallsV2"
    ]
   },
   {
@@ -1260,7 +1270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### getFeatureDistinctFunctionCall"
+    "#### getFeatureDistinctFunctionCallV2"
    ]
   },
   {
@@ -1284,7 +1294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### addFeatureDistinctFunctionCall"
+    "#### addFeatureDistinctFunctionCallV2"
    ]
   },
   {
@@ -1308,7 +1318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### deleteFeatureDistinctFunctionCall "
+    "#### deleteFeatureDistinctFunctionCallV2"
    ]
   },
   {
@@ -1329,7 +1339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### addFeatureDistinctFunctionCallElement"
+    "#### addFeatureDistinctFunctionCallElementV2"
    ]
   },
   {
@@ -1350,7 +1360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### deleteFeatureDistinctFunctionCallElement"
+    "#### deleteFeatureDistinctFunctionCallElementV2"
    ]
   },
   {
@@ -1378,7 +1388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### listAttributeClasses"
+    "### listAttributeClassesV2"
    ]
   },
   {
@@ -1402,7 +1412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### listAttributes"
+    "### listAttributesV2"
    ]
   },
   {
@@ -1428,7 +1438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### getAttribute"
+    "### getAttributeV2"
    ]
   },
   {
@@ -1452,7 +1462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### addAttribute"
+    "### addAttributeV2"
    ]
   },
   {
@@ -1476,7 +1486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### deleteAttribute"
+    "### deleteAttributeV2"
    ]
   },
   {
@@ -1489,6 +1499,89 @@
     "    input_json = \"{\\\"ATTR_CODE\\\":\\\"NAME_FIRST\\\"}\"\n",
     "    g2_config.deleteAttributeV2(config_handle, input_json)\n",
     "    \n",
+    "except G2Exception.G2ModuleGenericException as err:\n",
+    "    print(g2_config.getLastException())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleanup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### getLastException"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(g2_config.getLastException())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### clearLastException"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    g2_config.clearLastException()\n",
+    "\n",
+    "except G2Exception.G2ModuleGenericException as err:\n",
+    "    print(g2_config.getLastException())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    g2_config.close(config_handle)\n",
+    "\n",
+    "except G2Exception.G2ModuleGenericException as err:\n",
+    "    print(g2_config.getLastException())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### destroy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    g2_config.destroy()\n",
+    "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_config.getLastException())"
    ]
