--- a/notebooks/senzing-sdk-api-specification/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/senzing-sdk-api-specification/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# G2ConfigMgr Reference\n",
-    "\n",
-    "More information:\n",
-    "\n",
-    "1. [GitHub repository](https://github.com/Senzing/docker-jupyter)\n",
-    "1. [Senzing documentation](http://docs.senzing.com/?python#g2config)"
+    "# G2ConfigMgr Reference"
    ]
   },
   {
@@ -204,7 +199,7 @@
     "During the call, the initialization methods accept the following parameters:\n",
     "\n",
     "- **module_name:** A short name given to this instance of the G2 engine (i.e. your G2Module object)\n",
-    "- **senzing_config_json:** A JSON document containing system parameters. For more information, see [http://docs.senzing.com/?python](http://docs.senzing.com/?python#initialization-parameters).\n",
+    "- **senzing_config_json:** A JSON document containing system parameters.\n",
     "- **verbose_logging:** A boolean which enables diagnostic logging - this will print a massive amount of information to stdout (default = False)\n",
     "\n",
     "Calling these functions will return \"0\" upon success - useful for error handling."
