--- a/notebooks/senzing-sdk-api-specification/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/senzing-sdk-api-specification/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# G2Engine Reference\n",
-    "\n",
-    "More information:\n",
-    "\n",
-    "1. [GitHub repository](https://github.com/Senzing/docker-jupyter)\n",
-    "1. [Senzing documentation](http://docs.senzing.com/?python#g2config)"
+    "# G2Engine Reference"
    ]
   },
   {
@@ -120,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%run senzing-init-config.ipynb"
@@ -132,7 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%store -r senzing_config_json"
+    "%store -r senzing_config_json\n",
+    "%store -r config_id_bytearray\n",
+    "config_id=config_id_bytearray.decode()"
    ]
   },
   {
@@ -204,11 +203,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### destroy()\n",
+    "destroy the engine so that we can initalize differently"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g2_engine.destroy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### initWithConfigIDV2\n",
     "\n",
-    "Alternatively `initWithConfigIDV2()` can be used to specify a configuration.\n",
-    "For more information, see\n",
-    "[http://docs.senzing.com/?python](http://docs.senzing.com/?python#engine)."
+    "Alternatively `initWithConfigIDV2()` can be used to specify a configuration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    return_code = g2_engine.initWithConfigIDV2(\n",
+    "        module_name,\n",
+    "        senzing_config_json,\n",
+    "        config_id,\n",
+    "        verbose_logging)\n",
+    "\n",
+    "except G2Exception.G2ModuleGenericException as err:\n",
+    "    print(g2_engine.getLastException())"
    ]
   },
   {
@@ -218,8 +249,21 @@
     "### reinitV2\n",
     "\n",
     "The `reinitV2()` function may be used to reinitialize the engine\n",
-    "using a specified initConfigID. See\n",
-    "[http://docs.senzing.com/?python](http://docs.senzing.com/?python#engine)."
+    "using a specified initConfigID."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    return_code = g2_engine.reinitV2(\n",
+    "        config_id)\n",
+    "\n",
+    "except G2Exception.G2ModuleGenericException as err:\n",
+    "    print(g2_engine.getLastException())"
    ]
   },
   {
@@ -395,9 +439,7 @@
    "source": [
     "### Insert parameters\n",
     "\n",
-    "The following variables are used as parameters to the Senzing API.\n",
-    "Documentation for `g2_engine_flags` values is at\n",
-    "[http://docs.senzing.com/?python](http://docs.senzing.com/?python#engine-control-flags)"
+    "The following variables are used as parameters to the Senzing API."
    ]
   },
   {
@@ -498,9 +540,25 @@
    "source": [
     "### addRecordWithReturnedRecordID\n",
     "\n",
-    "Alternatively `addRecordWithReturnedRecordID()` can be used to add a record.\n",
-    "For more information, see\n",
-    "[http://docs.senzing.com/?python](http://docs.senzing.com/?python#data-manipulation)."
+    "Alternatively `addRecordWithReturnedRecordID()` can be used to add a record."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response=bytearray()\n",
+    "try:\n",
+    "    g2_engine.addRecordWithReturnedRecordID(\n",
+    "        datasource_code_1,\n",
+    "        response,\n",
+    "        data_as_json,\n",
+    "        load_id)\n",
+    "except G2Exception.G2ModuleGenericException as err:\n",
+    "    print(g2_engine.getLastException())\n",
+    "print(response.decode())"
    ]
   },
   {
@@ -1704,8 +1762,8 @@
     "The response document also contains a separate ENTITIES section,\n",
     "with the full information about the resolved entity.\n",
     "(Note: When working with this entity data,\n",
-    "Senzing recommends using the flags `G2_ENTITY_SHOW_FEATURES_EXPRESSED`\n",
-    "and `G2_ENTITY_SHOW_FEATURES_STATS`.\n",
+    "Senzing recommends using the flags `G2_ENTITY_OPTION_INCLUDE_INTERNAL_FEATURES`\n",
+    "and `G2_ENTITY_OPTION_INCLUDE_FEATURE_STATS`.\n",
     "This will provide detailed feature data that is not included by default,\n",
     "but is useful for understanding the WHY_RESULTS data.)\n",
     "\n",
@@ -1713,10 +1771,7 @@
     "enhanced versions of `whyEntityByEntityID()` and `whyEntityByRecordID()`\n",
     "that also allow you to use control flags.\n",
     "The `whyEntityByEntityID()` and `whyEntityByRecordID()` functions work in the\n",
-    "same way, but use the default flag value `G2_WHY_ENTITY_DEFAULT_FLAGS`.\n",
-    "\n",
-    "For more information, see\n",
-    "[http://docs.senzing.com/?python](http://docs.senzing.com/?python#connection-details)"
+    "same way, but use the default flag value `G2_WHY_ENTITY_DEFAULT_FLAGS`."
    ]
   },
   {
@@ -2138,10 +2193,7 @@
     "- **export_handle:** A long integer from which resolved entity data may be\n",
     "  read and exported.\n",
     "- **response_bytearray:** A memory buffer for returning the response\n",
-    "  document; if an error occurred, an error response is stored here.\n",
-    "\n",
-    "For more information, see\n",
-    "[http://docs.senzing.com/?python](http://docs.senzing.com/?python#reporting)."
+    "  document; if an error occurred, an error response is stored here."
    ]
   },
   {
@@ -2188,7 +2240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### exportCSVEntityReport\n",
+    "### exportCSVEntityReportV2\n",
     "\n",
     "There are three steps to exporting resolved entity data from the G2Engine\n",
     "object in CSV format.\n",
@@ -2201,7 +2253,7 @@
     "  export. (These are listed a little further down.)\n",
     "- **g2_engine_flags:** An integer specifying which entity details should be\n",
     "  included in the export.\n",
-    "  See the \"Entity Export Flags\" section for further details.\n",
+    "  See the \"Entity Export Flags\" section in the link below for further details.\n",
     "\n",
     "Second, use the `fetchNext()` method to read the exportHandle and export a\n",
     "row of CSV output containing the entity data for a single entity.\n",
@@ -2213,10 +2265,7 @@
     "- **export_handle:** A long integer from which resolved entity data may be\n",
     "  read and exported\n",
     "- **response_bytearray:** A memory buffer for returning the response\n",
-    "  document; if an error occurred, an error response is stored here\n",
-    "\n",
-    "For more information, see\n",
-    "[http://docs.senzing.com/?python](http://docs.senzing.com/?python#reporting)."
+    "  document; if an error occurred, an error response is stored here\n"
    ]
   },
   {
@@ -2226,7 +2275,8 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    export_handle = g2_engine.exportCSVEntityReport(g2_engine_flags)\n",
+    "    headers = 'RESOLVED_ENTITY_ID,RESOLVED_ENTITY_NAME,RELATED_ENTITY_ID,MATCH_LEVEL,MATCH_KEY,IS_DISCLOSED,IS_AMBIGUOUS,DATA_SOURCE,RECORD_ID,JSON_DATA,LAST_SEEN_DT,NAME_DATA,ATTRIBUTE_DATA,IDENTIFIER_DATA,ADDRESS_DATA,PHONE_DATA,RELATIONSHIP_DATA,ENTITY_DATA,OTHER_DATA'\n",
+    "    export_handle = g2_engine.exportCSVEntityReportV2(headers,g2_engine_flags)\n",
     "\n",
     "    while True:\n",
     "        response_bytearray = bytearray()\n",
@@ -2839,8 +2889,7 @@
     "\n",
     "Once all searching is done in a given process,\n",
     "call `destroy()` to uninitialize Senzing and clean up resources.\n",
-    "You should always do this once at the end of each process. See\n",
-    "[http://docs.senzing.com/?python](http://docs.senzing.com/?python#engine)."
+    "You should always do this once at the end of each process."
    ]
   },
   {
